Fix bug on detail message if too long

--- a/front/src/app/evenements/main-courante/detail-message/detail-message.component.scss
+++ b/front/src/app/evenements/main-courante/detail-message/detail-message.component.scss
@@ -14,6 +14,7 @@
     width: 400px;
     border-left: 1px solid $blueGrey;
     padding-top: 0;
+    overflow: scroll;
   }
 }
 .detail-message {
